--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="text_16sp">16sp</dimen>
+
+    <dimen name="line_spacing_extra">4dp</dimen>
+    <dimen name="chip_padding">8dip</dimen>
+    <dimen name="chip_height">25dip</dimen>
+    <dimen name="chip_text_size">14sp</dimen>
 </resources>
