--- a/app/src/main/res/layout/activity_html.xml
+++ b/app/src/main/res/layout/activity_html.xml
@@ -6,18 +6,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="cn.com.timemachine.ui.activity.HtmlActivity">
-    <FrameLayout
-        android:id="@+id/web_container"
-        android:background="@color/white"
+
+    <WebView
+        android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ProgressBar
-            android:id="@+id/web_progress_bar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@android:color/transparent"
-            android:indeterminateOnly="false"
-            android:visibility="visible"/>
-    </FrameLayout>
+
+    </WebView>
 </LinearLayout>
