--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,6 +98,7 @@
             app:sSelectorPressedColor="@color/button_press"
             />
         <TextView
+            android:id="@+id/tv_forget"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:layout_marginTop="10dp"
