--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="chip_padding">8dip</dimen>
     <dimen name="chip_height">25dip</dimen>
     <dimen name="chip_text_size">14sp</dimen>
+    <dimen name="Info_RightSize">16sp</dimen>
+    <dimen name="Info_LeftSize">15sp</dimen>
 </resources>
